MDEV-5116 MariaDB upgrade breaks replication

mysql_upgrade should do --skip-write-binlog by default